test/official_tests/field/set_on_bool.lox
true.foo = "value"; // error: {"line":1,"message":"Only class instances have properties","type":"RuntimeError"}
